Fix right white space

--- a/mean-cv-generator/src/app/app.component.scss
+++ b/mean-cv-generator/src/app/app.component.scss
@@ -12,3 +12,13 @@ app-editor{
     padding-right: 0px;
     padding-left: 0px;
 }
+app-infomation{
+    padding-right: 5px;
+
+}
+app-template{
+    padding: 5px;
+}
+#container{
+
+}
