--- a/mean-cv-generator/src/app/toolbar/toolbar.component.scss
+++ b/mean-cv-generator/src/app/toolbar/toolbar.component.scss
@@ -14,7 +14,9 @@ nav{
             }
             button{
                 margin: 5px;
-                display: block;    
+                display: block;   
+                height: 10%; 
+                font-size: 10;
             }       
         }
     }
